# locobot

./: .gitignore  README.md  catkin_make.sh  docker_run.sh  download_model.sh  environment.sh  start_tx2.sh
catkin_ws/src/bridge/src/: bridge.py
catkin_ws/src/control/cfg/: ang_PID.cfg  pos_PID.cfg
catkin_ws/src/control/src/: pid_control.py
catkin_ws/src/navigation/astar/: CMakeLists.txt
catkin_ws/src/navigation/astar/launch/: tracking.launch
catkin_ws/src/navigation/astar/src/: astar.cpp  path_plan.cpp  pc2grid.cpp  pc2grid.h  pure_pursuit.py  tracking.py
catkin_ws/src/ssd_mobile_lite/: CMakeLists.txt  package.xml
catkin_ws/src/ssd_mobile_lite/launch/: ssd_prediction.launch
catkin_ws/src/ssd_mobile_lite/src/: bb_ssd_mobile_lite.py  pub_arti_pose_ssd.cpp  pub_arti_pose_ssd.h
catkin_ws/src/ssd_mobile_lite/src/vision/datasets/: track_and_trail_dataset.py  vimo_gesture.py
catkin_ws/src/ssd_mobile_lite/src/vision/nn/: mobilenet_v2.py
catkin_ws/src/ssd_mobile_lite/src/vision/ssd/: mobilenet_v2_ssd_lite.py  ssd.py
catkin_ws/src/subt_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/subt_msgs/msg/: AnchorBallDetection.msg  ArtifactPose.msg  ArtifactPoseArray.msg  BoundingBoxes.msg  GloraPack.msg  SubTInfo.msg  mask_center.msg  masks.msg
catkin_ws/src/subt_msgs/srv/: artifact.srv  frame_switch.srv  int8.srv  node_stat.srv  pose.srv  report.srv  ultra_info.srv
catkin_ws/src/teleop_twist_joy/launch/: teleop.launch
catkin_ws/src/tracking/launch/: track_and_trail.launch
catkin_ws/src/tracking/src/: tracking.py
(+2 files in other folders)
